# pycallnumber

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: do-checks-and-tests.yml  publish.yml
pycallnumber/: __init__.py  factories.py  options.py  set.py  settings.py  template.py  unit.py  utils.py
pycallnumber/units/: __init__.py  compound.py  numbers.py  simple.py
pycallnumber/units/callnumbers/: __init__.py  dewey.py  lc.py  sudoc.py
pycallnumber/units/dates/: __init__.py  base.py  datestring.py  parts.py
src/pycallnumber/: __init__.py  exceptions.py  factories.py  options.py  set.py  settings.py  template.py  unit.py  utils.py
src/pycallnumber/units/: __init__.py  compound.py  numbers.py  simple.py
src/pycallnumber/units/callnumbers/: __init__.py  dewey.py  lc.py  local.py  parts.py  sudoc.py
src/pycallnumber/units/dates/: __init__.py  datestring.py  parts.py
tests/: context.py  helpers.py  test_factories.py  test_options.py  test_set.py  test_template.py  test_unit.py  test_units.py  test_utils.py
