[metadata]
name=pycallnumber
version=attr: pycallnumber.__version__
description=A Python library for parsing call numbers.
long_description=file: README.md
long_description_content_type=text/markdown 
author=Jason Thomale
author_email=jason.thomale@unt.edu
maintainer=University of North Texas Libraries
keywords=python, callnumber, callnumbers, call number, call numbers
license=BSD
classifiers=
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development
project_urls=
    homepage=https://github.com/unt-libraries/pycallnumber

[options]
package_dir=
    =src
packages=find:
install_requires =
    future; python_version=="2.7"
    importlib_metadata>=2.0.0; python_version<="3.7"

[options.packages.find]
where=src

[options.extras_require]
dev =
    pytest>=6.2.4; python_version>="3.10"
    pytest>=3.5.0; python_version<"3.10"
